--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://173.82.237.203:1313/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Evan'
