I think that this is a great structure. It will need to be kept in sync with my antinet, but if anything I'll be working from that instead of this. All of the info I have seems like it could flow very readily into this structure. Just have to keep it focused.

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,12 @@ title: Evan
 disableKinds:
   - taxonomy
   - term
+markup:
+  goldmark:
+    extensions:
+    renderer:
+      unsafe: true
+    
 security:
   exec:
     allow:
